@@ -425,3 +425,16 @@ def typing_and_value_assignment_with_tuple_assignment():
     var_one, var_two = 1, 1
     print(var_one)
     print(var_two)
+
+
+def nested_class_as_return_annotation():
+    """A namedtuple as a class attribute is used as a return annotation"""
+    from collections import namedtuple
+
+    class MyObject:
+        Coords = namedtuple('Point', ['x', 'y'])
+
+        def my_method(self) -> Coords:
+            pass
+
+    print(MyObject)
